--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="dropdown relative">
                         <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
                         <div class="dropdown-content">
-                            <a href="cda.html">Charge D' Affairs' Welcome</a>
+                            <a href="cda.html">Charge D'Affairs' Welcome</a>
                             <a href="mission-history.html">History of the Mission</a>
                             <a href="our-team.html">Our Team</a>
                         </div>
@@ -221,17 +221,39 @@
         </section>
         
         <div class="bg-gray-50">
-            <!-- Charge D' Affairs' Welcome -->
+            <!-- Charge D'Affairs' Welcome -->
             <section class="py-20 fade-in-section">
                  <div class="container mx-auto px-6">
                     <div class="bg-white p-12 rounded-lg shadow-lg card-lift-effect">
                         <div class="flex flex-wrap items-center">
                             <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/charge-daffairs.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
                             <div class="w-full md:w-2/3 md:pl-12">
-                                <h2 class="text-3xl md:text-4xl font-bold font-heading text-gray-800">A Message from the Charge D' Affairs</h2>
+                                <h2 class="text-3xl md:text-4xl font-bold font-heading text-gray-800">A Message from the Charge D'Affairs</h2>
                                 <div class="w-20 h-1 bg-nigeria-green my-6"></div>
                                 <p class="text-gray-600 mb-4">On behalf of the President of the Federal Republic of Nigeria, I extend a warm welcome to our official website. We are dedicated to fostering strong diplomatic ties and providing excellent consular services.</p>
                                 <a href="cda.html" class="nigeria-green font-semibold hover:underline">Read the full message <i class="fas fa-arrow-right ml-1"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+             <!-- President's Vision Section -->
+            <section class="py-20 fade-in-section bg-white">
+                 <div class="container mx-auto px-6">
+                    <div class="bg-white p-12 rounded-lg">
+                        <div class="flex flex-wrap items-center">
+                            <div class="w-full md:w-2/3 md:pr-12">
+                                <h2 class="text-3xl md:text-4xl font-bold font-heading text-gray-800">The President's Vision</h2>
+                                <div class="w-20 h-1 bg-nigeria-green my-6"></div>
+                                <blockquote>
+                                    <p class="text-2xl italic text-gray-600 leading-relaxed">"Renewed hope has dawned in Nigeria. I shall be a fair leader to all Nigerians. I will be in tune with your aspirations, charge up your energies and harness your talents to deliver a nation that we can be proud of."</p>
+                                </blockquote>
+                                <cite class="block mt-4 text-right font-semibold text-gray-800 not-italic">His Excellency, Bola Ahmed Tinubu, GCFR</cite>
+                                <cite class="block text-right text-gray-500 not-italic">President of the Federal Republic of Nigeria</cite>
+                            </div>
+                             <div class="w-full md:w-1/3 text-center mt-8 md:mt-0">
+                                <img src="images/president-portrait.jpg" alt="President of Nigeria" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
                             </div>
                         </div>
                     </div>
@@ -246,7 +268,7 @@
                         <div class="lg:col-span-2 space-y-12">
                             <!-- Video Section -->
                             <div class="bg-white p-8 rounded-lg shadow-lg">
-                                <h2 class="text-3xl font-bold section-title inline-block mb-6 relative pb-2 font-heading text-center w-full">Embassy Tour</h2>
+                                <h2 class="text-3xl font-bold section-title inline-block mb-6 relative pb-2 font-heading text-center w-full">Explore Our Mission</h2>
                                 <div class="max-w-full mx-auto bg-black rounded-lg shadow-xl overflow-hidden">
                                     <video class="w-full" controls autoplay muted loop>
                                         <source src="video/embassy-promo.mp4" type="video/mp4">
@@ -258,8 +280,8 @@
                             <div class="bg-white p-8 rounded-lg shadow-lg">
                                 <h2 class="text-3xl font-bold section-title inline-block mb-12 relative pb-2 font-heading text-center w-full">Latest News & Events</h2>
                                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                                    <div class="card-lift-effect"><img src="images/news-event1.png" alt="Community event" class="w-full h-48 object-cover rounded-t-lg"><div class="p-6 text-left"><span class="text-xs text-gray-500">September 1, 2025</span><h4 class="font-bold text-lg my-2 font-heading">Embassy Celebrates Nigerian Independence Day</h4><p class="text-gray-600 text-sm mb-4">Details of the upcoming flag-raising ceremony...</p><a href="news-article-1.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
-                                    <div class="card-lift-effect"><img src="images/news-event2.png" alt="Online booking system" class="w-full h-48 object-cover rounded-t-lg"><div class="p-6 text-left"><span class="text-xs text-gray-500">August 25, 2025</span><h4 class="font-bold text-lg my-2 font-heading">New Consular Appointment System Launched</h4><p class="text-gray-600 text-sm mb-4">The Embassy has launched a new online system...</p><a href="news-article-2.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
+                                    <div class="card-lift-effect"><img src="images/news-event1.jpg" alt="Community event" class="w-full h-48 object-cover rounded-t-lg"><div class="p-6 text-left"><span class="text-xs text-gray-500">September 1, 2025</span><h4 class="font-bold text-lg my-2 font-heading">Embassy Celebrates Nigerian Independence Day</h4><p class="text-gray-600 text-sm mb-4">Details of the upcoming flag-raising ceremony...</p><a href="news-article-1.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
+                                    <div class="card-lift-effect"><img src="images/news-event2.jpg" alt="Online booking system" class="w-full h-48 object-cover rounded-t-lg"><div class="p-6 text-left"><span class="text-xs text-gray-500">August 25, 2025</span><h4 class="font-bold text-lg my-2 font-heading">New Consular Appointment System Launched</h4><p class="text-gray-600 text-sm mb-4">The Embassy has launched a new online system...</p><a href="news-article-2.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
                                 </div>
                             </div>
                         </div>
@@ -275,7 +297,7 @@
                                             <h3 class="font-bold text-lg text-yellow-800 font-heading">Important Announcements</h3>
                                         </div>
                                     </div>
-                                    <p class="text-yellow-700 mt-4 text-sm">The Embassy will be closed on Oct 28th & 29th for national holidays. We will resume normal services on Oct 30th.</p>
+                                    <p class="text-yellow-700 mt-4 text-sm">The Embassy will be closed on Oct 1st for Nigeria's Independence Day Celebration. We will resume normal services on Oct 2nd.</p>
                                 </div>
                             </div>
                             <!-- Consular Services -->
@@ -309,10 +331,10 @@
                 <div class="container mx-auto px-6 text-center">
                     <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 font-heading">From the Gallery</h2>
                     <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-                        <a href="gallery.html" class="relative block rounded-lg overflow-hidden group card-lift-effect"><img src="images/gallery-1.JPG" alt="Gallery Image 1" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption 1</p></div></a>
-                        <a href="gallery.html" class="relative block rounded-lg overflow-hidden group card-lift-effect"><img src="images/gallery-2.JPG" alt="Gallery Image 2" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption 2</p></div></a>
-                        <a href="gallery.html" class="relative block rounded-lg overflow-hidden group card-lift-effect"><img src="images/gallery-3.JPG" alt="Gallery Image 3" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption 3</p></div></a>
-                        <a href="gallery.html" class="relative block rounded-lg overflow-hidden group card-lift-effect"><img src="images/gallery-4.JPG" alt="Gallery Image 4" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption 4</p></div></a>
+                        <a href="gallery.html" class="relative block rounded-lg overflow-hidden group card-lift-effect"><img src="images/gallery-1.jpg" alt="Gallery Image 1" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption 1</p></div></a>
+                        <a href="gallery.html" class="relative block rounded-lg overflow-hidden group card-lift-effect"><img src="images/gallery-2.jpg" alt="Gallery Image 2" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption 2</p></div></a>
+                        <a href="gallery.html" class="relative block rounded-lg overflow-hidden group card-lift-effect"><img src="images/gallery-3.jpg" alt="Gallery Image 3" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption 3</p></div></a>
+                        <a href="gallery.html" class="relative block rounded-lg overflow-hidden group card-lift-effect"><img src="images/gallery-4.jpg" alt="Gallery Image 4" class="w-full h-48 object-cover transform group-hover:scale-110 transition-transform duration-300"><div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-60 transition-all duration-300 flex items-end p-4"><p class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm font-semibold">Caption 4</p></div></a>
                     </div>
                     <a href="gallery.html" class="mt-8 inline-block nigeria-green-bg text-white font-bold py-3 px-8 rounded-full text-lg hover:opacity-90 transition-opacity">View Full Gallery</a>
                 </div>
