--- a/news-article-1.html
+++ b/news-article-1.html
@@ -162,7 +162,7 @@
                     <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect max-w-4xl mx-auto">
                         <div class="prose max-w-none text-gray-700 space-y-6">
                             <p class="lead">The Embassy of the Federal Republic of Nigeria in Prague is pleased to announce the details of the upcoming flag-raising ceremony and cultural reception to mark Nigeria's Independence Day anniversary.</p>
-                            <p>This auspicious event will be held at the Embassy premises and will be graced by the presence of Her Excellency, Ambassador H.E. Dr. Maureen Tamuno, members of the diplomatic corps, Czech government officials, and leaders of the Nigerian community.</p>
+                            <p>This auspicious event will be held at the Embassy premises and will be graced by the presence of Her Excellency, Charge D'Affairs A.I. Mrs. Sarah Bukar-Godwin, members of the diplomatic corps, Czech government officials, and leaders of the Nigerian community.</p>
                             <p>The celebration will feature a showcase of Nigeria's rich cultural heritage, including traditional music, dance performances, and a taste of authentic Nigerian cuisine. It serves as an opportunity to reflect on our journey as a nation and to celebrate the enduring friendship between Nigeria and the Czech Republic.</p>
                             <p>All members of the Nigerian community and friends of Nigeria are cordially invited to join in the festivities. Further details regarding the schedule of events will be made available shortly.</p>
                              <a href="news.html" class="text-blue-600 hover:underline">&larr; Back to News</a>
