--- a/news-article-2.html
+++ b/news-article-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Consular Appointment System Launched | Embassy of Nigeria, Prague</title>
+    <title>Nigeria Deepens Strategic Engagement with Czech Republic | Embassy of Nigeria, Prague</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,7 +88,7 @@
                     <div class="dropdown relative">
                         <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
                         <div class="dropdown-content">
-                            <a href="cda.html">Charge D' Affairs' Welcome</a>
+                            <a href="ambassador.html">Ambassador's Welcome</a>
                             <a href="mission-history.html">History of the Mission</a>
                             <a href="our-team.html">Our Team</a>
                         </div>
@@ -147,11 +147,11 @@
     <main>
         <!-- Page Title Header -->
         <section class="relative py-20 text-white">
-            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/news-event2.png');"></div>
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/news-event2.jpg');"></div>
             <div class="absolute inset-0 bg-black opacity-60"></div>
             <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl font-bold font-heading">New Consular Appointment System Launched</h1>
-                <p class="text-gray-200 mt-2">Published on: August 25, 2025</p>
+                <h1 class="text-4xl font-bold font-heading">Nigeria Deepens Strategic Engagement with Czech Republic</h1>
+                <p class="text-gray-200 mt-2">Published on: October 11, 2025</p>
             </div>
         </section>
 
@@ -159,13 +159,45 @@
         <div class="main-content-bg">
             <section class="py-20">
                 <div class="container mx-auto px-6">
-                    <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect max-w-4xl mx-auto">
-                        <div class="prose max-w-none text-gray-700 space-y-6">
-                            <p class="lead">To improve efficiency and reduce waiting times, the Embassy of Nigeria in Prague has officially launched a new online appointment booking system for all consular services, including visa applications, passport renewals, and document legalization.</p>
-                            <p>This new system is designed to provide a more streamlined and convenient experience for our applicants. From today, all individuals seeking consular services must book an appointment through the new online portal before visiting the Embassy. This will ensure that our consular staff can attend to each applicant in a timely and organized manner.</p>
-                            <p>We believe this modernization of our services will significantly enhance the quality of our service delivery. We thank you for your cooperation and understanding as we transition to this new system.</p>
-                             <a href="news.html" class="text-blue-600 hover:underline">&larr; Back to News</a>
+                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-12">
+                        <div class="lg:col-span-2">
+                            <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
+                                <div class="prose max-w-none text-gray-700 space-y-6">
+                                    <p class="lead">In a bid to strengthen diplomatic, economic, and people-to-people ties, the Nigeria Embassy in Prague, in conjunction with The Platform, successfully hosted a Meet and Greet event on 27th September 2025. The event, held at Hlubocepska in Prague 5, brought together Nigerian experts, professionals, and entrepreneurs residing in the Czech Republic for a focused conversation on cooperation, opportunity, and the way forward.</p>
+                                    <p>The gathering emphasized dialogue over ceremony, serving as a platform to explore collaboration within the Nigerian diaspora and between Nigeria and Czech institutions. Discussions revolved around challenges faced by Nigerians in the Czech Republic, strategies for community advancement, and the strengthening of bilateral ties between both nations.</p>
+                                    
+                                    <h2 class="font-heading text-2xl nigeria-green">Nigeria-Czech Relations: A Partnership with Promise</h2>
+                                    <p>The Meet & Greet comes at a pivotal time in Nigeria-Czech relations. Nigeria has acknowledged the Czech Republic’s growing recognition of Africa as a strategic partner and appreciates its proactive engagement with the continent. This growing relationship holds significant promise: while Nigeria offers vast human and natural resources ripe for investment, the Czech Republic contributes technical expertise, innovation, and industrial capacity.</p>
+                                    <p>At the sub-national level, Czech cooperation with Nigerian states such as Taraba, Imo, and Edo highlights the expanding scope for practical partnerships. Several Czech companies have already approached the Embassy to initiate business relations with Nigerian counterparts, aiming to foster smoother business channels and economic exchanges.</p>
+
+                                    <h2 class="font-heading text-2xl nigeria-green">Toward a Strategic Framework and Bilateral Agreement</h2>
+                                    <p>As part of its broader diplomatic mission, the Embassy has proposed convening a Maiden Experts’ Meeting, which will serve as a cornerstone for the signing of a Bilateral Agreement and possibly a High-Level Visit. The Czech Government has responded positively, expressing readiness to collaborate across key sectors such as: Trade, Defence and Security, Education, Agriculture, Technical and Digital Economy, Renewable Energy, and Tourism. Such sectors align with the comparative advantages of both countries and promise mutually beneficial growth.</p>
+
+                                    <h2 class="font-heading text-2xl nigeria-green">Building for the Future: From Government to People</h2>
+                                    <p>In parallel, the Embassy is working toward a more structured Government-to-Government framework, which would provide the basis for deeper strategic cooperation. This would also create platforms for Nigerians in the Czech Republic and Czech nationals engaging with Nigeria to thrive, grow visibility, and strengthen their contributions to society.</p>
+                                    <p>Efforts are also underway to improve accessibility to consular services. The Embassy has reactivated its official website and social media platforms, offering improved consular outreach and more streamlined visa and documentation services.</p>
+
+                                    <h2 class="font-heading text-2xl nigeria-green">A Mission of Peace and Progress</h2>
+                                    <p>Charge D'Affairs A.I. Mrs Sarah Bukar-Godwin, in her remarks, reflected on the peaceful and cooperative spirit that has defined Nigeria-Czech relations, emphasizing that the Embassy remains fully committed to advancing the mutual interests of both nations.</p>
+                                    <p>“Looking at the history of my service,” she stated, “I can confidently affirm that the Czech Republic has been, and continues to be, a Mission of peace. It is my sincere hope that this spirit endures.”</p>
+                                    <p>The Embassy reaffirmed its commitment to convening the Maiden Experts’ Meeting and supporting landmark engagements that enhance the lives of Nigerians in the Czech Republic and promote sustainable, long-term cooperation between both nations.</p>
+
+                                     <a href="news.html" class="text-blue-600 hover:underline">&larr; Back to News</a>
+                                </div>
+                            </div>
                         </div>
+                        <!-- Sidebar -->
+                        <aside class="lg:col-span-1">
+                            <div class="bg-white p-6 rounded-lg shadow-lg">
+                                <h3 class="font-heading text-xl font-bold mb-4 border-b pb-2">Useful Links</h3>
+                                <ul class="space-y-3 text-gray-700">
+                                    <li><a href="visas.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-passport mr-2"></i>Apply for a Nigerian Visa</a></li>
+                                    <li><a href="etc.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-plane-departure mr-2"></i>Emergency Travel Documents</a></li>
+                                    <li><a href="https://www.immigration.gov.ng/" target="_blank" class="hover:text-nigeria-green hover:underline"><i class="fas fa-link mr-2"></i>Nigeria Immigration Service</a></li>
+                                    <li><a href="news.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-calendar-alt mr-2"></i>Public Holidays Schedule</a></li>
+                                </ul>
+                            </div>
+                        </aside>
                     </div>
                 </div>
             </section>
@@ -195,8 +227,13 @@
     </footer>
     
     <script>
+        // Function to scroll to top on page load/refresh
+        window.onbeforeunload = function () {
+            window.scrollTo(0, 0);
+        }
+
         document.addEventListener('DOMContentLoaded', function () {
-            // JS for menus and translation
+            // JS for menus and live clock
             function updateTime() {
                 const timeEl = document.getElementById('prague-time');
                 if (timeEl) {
