--- a/news.html
+++ b/news.html
@@ -163,7 +163,7 @@
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden card-lift-effect">
                             <img src="images/news-event1.png" alt="Community event" class="w-full h-56 object-cover">
                             <div class="p-6">
-                                <span class="text-sm text-gray-500">September 1, 2025</span>
+                                <span class="text-sm text-gray-500">October 1, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">Embassy Celebrates Nigerian Independence Day</h2>
                                 <p class="text-gray-600 mb-4">Details of the upcoming flag-raising ceremony and cultural reception to mark Nigeria's Independence Day anniversary have been announced...</p>
                                 <a href="news-article-1.html" class="font-semibold text-gray-700 hover:nigeria-green">Read More &rarr;</a>
@@ -171,11 +171,11 @@
                         </div>
                         <!-- News Card 2 -->
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden card-lift-effect">
-                            <img src="images/news-event2.png" alt="Online booking system" class="w-full h-56 object-cover">
+                            <img src="images/news-event2.jpg" alt="Online booking system" class="w-full h-56 object-cover">
                             <div class="p-6">
-                                <span class="text-sm text-gray-500">August 25, 2025</span>
-                                <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">New Consular Appointment System Launched</h2>
-                                <p class="text-gray-600 mb-4">The Embassy has launched a new online appointment booking system for all consular services to improve efficiency and reduce waiting times...</p>
+                                <span class="text-sm text-gray-500">September 27, 2025</span>
+                                <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">Nigeria Deepens Strategic Engagement with Czech Republic at September Experts’ Meet & Greet in Prague</h2>
+                                <p class="text-gray-600 mb-4">In a bid to strengthen diplomatic, economic, and people-to-people ties, the Nigeria Embassy in Prague, in conjunction with The Platform, successfully hosted a Meet and Greet event...</p>
                                 <a href="news-article-2.html" class="font-semibold text-gray-700 hover:nigeria-green">Read More &rarr;</a>
                             </div>
                         </div>
