--- a/nigeria-symbols.html
+++ b/nigeria-symbols.html
@@ -168,7 +168,7 @@
                                             <p class="text-gray-700">The Nigerian flag was designed in 1959 and first officially hoisted on October 1, 1960. The flag has three vertical bands of green, white, and green. The two green stripes represent Nigeria's natural wealth and rich agricultural land, while the white band in the middle represents peace and unity.</p>
                                         </div>
                                         <div class="card-lift-effect">
-                                            <img src="images/nigerian-flag-large.jpg" alt="The National Flag of Nigeria" class="rounded-lg shadow-md w-full">
+                                            <img src="images/nigerian-flag-large.png" alt="The National Flag of Nigeria" class="rounded-lg shadow-md w-full">
                                         </div>
                                     </div>
 
