--- a/nigeria-symbols.html
+++ b/nigeria-symbols.html
@@ -168,7 +168,7 @@
                                             <p class="text-gray-700">The Nigerian flag was designed in 1959 and first officially hoisted on October 1, 1960. The flag has three vertical bands of green, white, and green. The two green stripes represent Nigeria's natural wealth and rich agricultural land, while the white band in the middle represents peace and unity.</p>
                                         </div>
                                         <div class="card-lift-effect">
-                                            <img src="images/nigerian-flag-large.png" alt="The National Flag of Nigeria" class="rounded-lg shadow-md w-full">
+                                            <img src="images/nigerian-flag.png" alt="The National Flag of Nigeria" class="rounded-lg shadow-md w-full">
                                         </div>
                                     </div>
 
@@ -191,11 +191,34 @@
                                         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-center">
                                             <div class="card-lift-effect bg-gray-50 p-6 rounded-lg">
                                                 <h3 class="font-heading text-xl nigeria-green">The National Anthem</h3>
-                                                <p class="text-gray-700 mt-2 italic">"Arise, O Compatriots, Nigeria's call obey..."</p>
+                                                <p class="text-gray-700 mt-2 italic">"Nigeria, we hail thee,
+Our own dear native land,
+Though tribe and tongue may differ,
+In brotherhood we stand,
+Nigerians all,
+And proud to serve
+Our sovereign Motherland."</p>
+                                                <p class="text-gray-700 mt-2 italic">"Our flag shall be a symbol
+That truth and justice reign,
+In peace or battle honoured,
+And this we count as gain,
+To hand on to our children
+A banner without stain."</p>
+                                                <p class="text-gray-700 mt-2 italic">"O God of all creation,
+Grant this our one request:
+Help us to build a nation
+Where no man is oppressed,
+And so with peace and plenty
+Nigeria may be blessed."</p>
                                             </div>
                                             <div class="card-lift-effect bg-gray-50 p-6 rounded-lg">
                                                 <h3 class="font-heading text-xl nigeria-green">The National Pledge</h3>
-                                                <p class="text-gray-700 mt-2 italic">"I pledge to Nigeria my country, to be faithful, loyal and honest..."</p>
+                                                <p class="text-gray-700 mt-2 italic">"I pledge to Nigeria my country.
+To be faithful, loyal and honest.
+To serve Nigeria with all my strength.
+To defend her unity.
+And uphold her honour and glory.
+So help me God."</p>
                                             </div>
                                         </div>
                                     </div>
