--- a/nigeria-economy.html
+++ b/nigeria-economy.html
@@ -167,6 +167,7 @@
                                     
                                     <h2 class="font-heading text-3xl nigeria-green">Key Economic Sectors</h2>
                                      <ul class="list-disc list-inside space-y-2">
+                                         <li><strong>Oil & Gas (Petroleum Industry):</strong> Accounts for over 80% of export revenue and a major share of government income; Nigeria is one of the largest oil producers in Africa; Natural gas is also becoming increasingly important.</li>
                                         <li><strong>Agriculture:</strong> A major contributor to the GDP, with key products including cocoa, palm oil, sorghum, and rubber. The government is heavily promoting investment in this sector to ensure food security and boost exports.</li>
                                         <li><strong>Services:</strong> The services sector is the largest contributor to Nigeria's GDP, driven by telecommunications, banking and finance, and a booming retail industry.</li>
                                         <li><strong>Information Technology:</strong> With a young, tech-savvy population, Nigeria has become a hub for tech startups and innovation in Africa. The fintech sector, in particular, has seen explosive growth.</li>
