--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
             opacity: 1;
             transform: translateY(0);
         }
+        /* Cookie Banner & Back to Top */
+        #cookie-banner {
+            transition: opacity 0.5s ease;
+        }
+        #back-to-top {
+            transition: opacity 0.3s, visibility 0.3s;
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -170,9 +177,12 @@
                             <a href="visas.html">Visa Services</a>
                             <a href="etc.html">Emergency Travel Certificate</a>
                             <hr class="my-1">
+                            <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Citizen Services</span>
+                            <a href="citizens-identification.html">Citizen Identification</a>
+                            <a href="citizen-registration.html">Citizen Registration</a>
+                            <hr class="my-1">
                             <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Document Legalization</span>
                             <a href="age-declaration.html">Age Declaration</a>
-                            <a href="citizens-identification.html">Citizens Identification</a>
                             <a href="change-of-profession.html">Change of Profession</a>
                             <a href="burial-permit.html">Burial Transit Permit</a>
                         </div>
@@ -226,7 +236,7 @@
                  <div class="container mx-auto px-6">
                     <div class="bg-white p-12 rounded-lg shadow-lg card-lift-effect">
                         <div class="flex flex-wrap items-center">
-                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/charge-daffairs.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
+                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/charge-daffairs.jpg" alt="Charge D'Affairs Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
                             <div class="w-full md:w-2/3 md:pl-12">
                                 <h2 class="text-3xl md:text-4xl font-bold font-heading text-gray-800">A Message from the Charge D'Affairs</h2>
                                 <div class="w-20 h-1 bg-nigeria-green my-6"></div>
@@ -238,7 +248,7 @@
                 </div>
             </section>
 
-             <!-- President's Vision Section -->
+            <!-- President's Vision Section -->
             <section class="py-20 fade-in-section bg-white">
                  <div class="container mx-auto px-6">
                     <div class="bg-white p-12 rounded-lg">
@@ -271,7 +281,7 @@
                                 <h2 class="text-3xl font-bold section-title inline-block mb-6 relative pb-2 font-heading text-center w-full">Explore Our Mission</h2>
                                 <div class="max-w-full mx-auto bg-black rounded-lg shadow-xl overflow-hidden">
                                     <video class="w-full" controls autoplay muted loop>
-                                        <source src="video/embassy-promo.mp4" type="video/mp4">
+                                        <source src="videos/embassy-promo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                 </div>
@@ -364,6 +374,17 @@
         </div>
     </footer>
     
+    <!-- Back to Top Button -->
+    <button id="back-to-top" class="fixed bottom-5 right-5 bg-nigeria-green text-white p-3 rounded-full shadow-lg hover:bg-green-700 transition-opacity duration-300 opacity-0 invisible">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
+    <!-- Cookie Consent Banner -->
+    <div id="cookie-banner" class="fixed bottom-0 left-0 right-0 bg-gray-800 text-white p-4 flex items-center justify-between shadow-lg opacity-0 -translate-y-full">
+        <p class="text-sm">We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies.</p>
+        <button id="cookie-accept" class="bg-nigeria-green text-white py-2 px-4 rounded-lg hover:bg-green-700">Accept</button>
+    </div>
+
     <script>
         // Function to scroll to top on page load/refresh
         window.onbeforeunload = function () {
@@ -474,6 +495,35 @@
             sections.forEach(section => {
                 observer.observe(section);
             });
+
+            // Cookie Banner
+            const cookieBanner = document.getElementById('cookie-banner');
+            const cookieAccept = document.getElementById('cookie-accept');
+            if (cookieBanner && cookieAccept) {
+                if (!localStorage.getItem('cookie_consent')) {
+                    cookieBanner.classList.remove('opacity-0', '-translate-y-full');
+                }
+                cookieAccept.addEventListener('click', function() {
+                    localStorage.setItem('cookie_consent', 'true');
+                    cookieBanner.style.display = 'none';
+                });
+            }
+
+
+            // Back to Top Button
+            const backToTopButton = document.getElementById('back-to-top');
+            if(backToTopButton) {
+                window.addEventListener('scroll', function() {
+                    if (window.pageYOffset > 300) {
+                        backToTopButton.classList.remove('opacity-0', 'invisible');
+                    } else {
+                        backToTopButton.classList.add('opacity-0', 'invisible');
+                    }
+                });
+                backToTopButton.addEventListener('click', function() {
+                    window.scrollTo({ top: 0, behavior: 'smooth' });
+                });
+            }
         });
     </script>
 </body>
